[gd_scene load_steps=2 format=3 uid="uid://djd0d7cywxn8l"]

[ext_resource type="Script" uid="uid://b33jxk5qr2tdv" path="res://Interfaces/interface_join_lobby.gd" id="1_7d6nb"]

[node name="JoinLobby" type="Node"]
script = ExtResource("1_7d6nb")

[node name="JoinInterface" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 1

[node name="MenuLabelContainer" type="VBoxContainer" parent="JoinInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.5
offset_top = -51.0
offset_right = 219.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinContainer" type="HBoxContainer" parent="JoinInterface/MenuLabelContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2

[node name="JoinButton" type="Button" parent="JoinInterface/MenuLabelContainer/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Join Game"

[node name="InputContainer" type="VBoxContainer" parent="JoinInterface/MenuLabelContainer/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2

[node name="JoinIp" type="TextEdit" parent="JoinInterface/MenuLabelContainer/JoinContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "IP"

[node name="JoinPort" type="TextEdit" parent="JoinInterface/MenuLabelContainer/JoinContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "PORT"

[node name="CloseButton" type="Button" parent="JoinInterface/MenuLabelContainer/JoinContainer"]
layout_mode = 2
text = "  X  "

[node name="Feedback" type="Label" parent="JoinInterface/MenuLabelContainer"]
layout_mode = 2
text = "connecting..."
